Fix header alignment

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1376,6 +1376,7 @@ body.horizontal-nav main {
         bottom: 32px;
         left: 32px;
         right: 32px;
+        height: auto;
         padding: 0;
         z-index: 5;
         display: flex;
